--- a/files/page3.html
+++ b/files/page3.html
@@ -98,7 +98,7 @@
 
         </div>
     <div id=back>
-            <a href="../home.html" style="color: black"><strong>BACK TO TREEHOUSE</strong></a>
+            <a href="../index.html" style="color: black"><strong>BACK TO TREEHOUSE</strong></a>
         </div>
         </div>
 
